Google Homepage Clone

--- a/index.html
+++ b/index.html
@@ -1,12 +1,108 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <script
+      src="https://kit.fontawesome.com/f8dcd23edf.js"
+      crossorigin="anonymous"
+    ></script>
+    <link rel="stylesheet" href="./src/style.css" />
     <title>Static Template</title>
   </head>
   <body>
-    <h1>This is a static template, there is no bundler or bundling involved!</h1>
+    <div class="container">
+      <!-- The Navigation Section -->
+
+      <nav>
+        <ul>
+          <li><a href="#">Gmail</a></li>
+          <li><a href="#">Images</a></li>
+          <li>
+            <a href="#"
+              ><span><i class="fas fa-th"></i></span
+            ></a>
+          </li>
+          <li><button>Sign in</button></li>
+        </ul>
+      </nav>
+
+      <!-- The Body Section -->
+
+      <section>
+        <!-- The Google Logo -->
+
+        <div class="logo">
+          <img
+            src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png"
+            alt="Google Logo"
+          />
+        </div>
+
+        <!-- Search Bar -->
+
+        <div class="search-bar">
+          <span>
+            <i class="fas fa-search"></i>
+          </span>
+          <input type="text" class="search-input" />
+          <span>
+            <svg
+              class="HPVvwb"
+              id="icon-mic"
+              focusable="false"
+              viewBox="0 0 24 24"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <path
+                d="m12 15c1.66 0 3-1.31 3-2.97v-7.02c0-1.66-1.34-3.01-3-3.01s-3 1.34-3 3.01v7.02c0 1.66 1.34 2.97 3 2.97z"
+                fill="#4285f4"
+              ></path>
+              <path d="m11 18.08h2v3.92h-2z" fill="#34a853"></path>
+              <path
+                d="m7.05 16.87c-1.27-1.33-2.05-2.83-2.05-4.87h2c0 1.45 0.56 2.42 1.47 3.38v0.32l-1.15 1.18z"
+                fill="#f4b400"
+              ></path>
+              <path
+                d="m12 16.93a4.97 5.25 0 0 1 -3.54 -1.55l-1.41 1.49c1.26 1.34 3.02 2.13 4.95 2.13 3.87 0 6.99-2.92 6.99-7h-1.99c0 2.92-2.24 4.93-5 4.93z"
+                fill="#ea4335"
+              ></path>
+            </svg>
+          </span>
+        </div>
+        <!-- Bottom Buttons -->
+
+        <div class="btns">
+          <button>Google Search</button>
+          <button>I'm Feeling Lucky</button>
+        </div>
+      </section>
+
+      <!-- The Footer -->
+
+      <footer>
+        <div class="section">
+          Ukraine
+        </div>
+        <div class="section">
+          <div class="left-side">
+            <ul>
+              <li>Advertising</li>
+              <li>Business</li>
+              <li>About</li>
+              <li>How Search Works</li>
+            </ul>
+          </div>
+          <div class="right-side">
+            <ul>
+              <li>Privacy</li>
+              <li>Terms</li>
+              <li>Settings</li>
+            </ul>
+          </div>
+        </div>
+      </footer>
+    </div>
   </body>
 </html>
