Google Home Page Clone

--- a/index.html
+++ b/index.html
@@ -32,13 +32,14 @@
 
       <section>
         <!-- The Google Logo -->
-
+        <br /><br /><br />
         <div class="logo">
           <img
             src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png"
             alt="Google Logo"
           />
         </div>
+        <br /><br />
 
         <!-- Search Bar -->
 
@@ -77,32 +78,31 @@
           <button>Google Search</button>
           <button>I'm Feeling Lucky</button>
         </div>
+
+        <!-- Links -->
+        <div class="links">Google Offered in : <a href="#">English</a></div>
       </section>
-
-      <!-- The Footer -->
-
-      <footer>
-        <div class="section">
-          Ukraine
-        </div>
-        <div class="section">
-          <div class="left-side">
-            <ul>
-              <li>Advertising</li>
-              <li>Business</li>
-              <li>About</li>
-              <li>How Search Works</li>
-            </ul>
-          </div>
-          <div class="right-side">
-            <ul>
-              <li>Privacy</li>
-              <li>Terms</li>
-              <li>Settings</li>
-            </ul>
-          </div>
-        </div>
-      </footer>
     </div>
+
+    <!-- The Footer -->
+    <footer>
+      <div class="section">
+        <div class="left-side">
+          <ul>
+            <li>
+              <span><i class="fas fa-map-marker-alt"></i></span> World
+            </li>
+            <li>Advertising</li>
+            <li>About</li>
+          </ul>
+        </div>
+        <div class="right-side">
+          <ul>
+            <li>Privacy</li>
+            <li>Settings</li>
+          </ul>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
