--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="./src/style.css" />
-    <title>Static Template</title>
+    <title>Google | Home Page Clone</title>
   </head>
   <body>
     <div class="container">
